--- a/src/components/elements/button/Button.module.scss
+++ b/src/components/elements/button/Button.module.scss
@@ -9,4 +9,10 @@
   border: 0;
   font-size: 1rem;
   cursor: pointer;
+  transition: 200ms   ;
+  box-shadow: 0px 24px 48px rgba(40, 6, 40, 0.1), 0px 12.15px 20.925px rgba(40, 6, 40, 0.0675), 0px 4.8px 7.8px rgba(40, 6, 40, 0.05), 0px 1.05px 2.775px rgba(40, 6, 40, 0.0325);
+}
+
+.button:hover, .button:focus {
+  scale: 1.05;
 }
